--- a/roles/fluentd/elasticsearch/defaults/main.yml
+++ b/roles/fluentd/elasticsearch/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-fluentd_elasticsearch_host: localhost
+fluentd_elasticsearch_host: "{{ hostvars[groups.elastic_hosts.0].ansible_default_ipv4.address}}"
 fluentd_elasticsearch_port: 9200
 fluentd_elasticsearch_index: fluentd
 fluentd_elasticsearch_type: fluentd
