--- a/roles/prereqs/libselinuxpython/tasks/main.yml
+++ b/roles/prereqs/libselinuxpython/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
-
-- name: install libselinux python
+- name: Install libselinux python
   package:
       name: '{{ libselinux_python_package_name }}'
       state: present
