--- a/playbook.yml
+++ b/playbook.yml
@@ -18,7 +18,8 @@
 - name: Install Kibana
   hosts: kibana_hosts
   roles:
-    - kibana
+    - kibana/server
+    - kibana/proxy
 
 - name: Install Redis
   hosts: redis_hosts
@@ -39,6 +40,7 @@
   hosts: uchiwa_hosts
   roles:
     - uchiwa
+    - uchiwa/proxy
 
 - name: Create firewall rules
   hosts: all
