--- a/roles/httpd/tasks/main.yml
+++ b/roles/httpd/tasks/main.yml
@@ -1,9 +1,15 @@
 ---
-
-- name: install httpd
+- name: Install httpd
   package:
     name: '{{ httpd_package_name }}'
     state: present
+  when: manage_packages|default(false)
+
+- name: Installing httpd modules
+  package:
+    name: '{{ item }}'
+    state: present
+  with_items: '{{ httpd_modules }}'
   when: manage_packages|default(false)
 
 - name: ensure httpd configuration directory exists
